style.css
:root {
    --color-grey: #808080;
    --color-black: #000;
}

* {
    box-sizing: border-box;
    padding: 0;
    margin: 0;
}

body {
    height: 100vh;
    display: grid;
    grid-template-columns: 1fr;
    grid-template-areas:
        'nav'
        'main';
}

html {
    font-size: 1rem;
    font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
    font-weight: 400;
    line-height: 1.5;
}

/* Navbar */
#navbar {
    grid-area: nav;
    text-align: center;
}

#navbar header {
    padding: 0.7rem;
    text-align: center;
    font-size: 1.4rem;
    font-weight: bold;
}

#navbar a {
    display: block;
    text-decoration: none;
    cursor: pointer;
    padding: 0.3rem 1rem;
    color: var(--color-grey);
}

#navbar a:hover {
    color: inherit;
}

#navbar li {
    border-top: 1px solid var(--color-grey);
    list-style: none;
    width: 100%;
}

@media screen and (min-width: 672px) {
    body {
        grid-template-columns: max-content 1fr;
        grid-template-rows: 1fr;
        grid-template-areas: 'nav main';
    }

    #navbar {
        border-right: 3px solid var(--color-grey);
        text-align: left;
    }

    #navbar a {
        padding: 0.5rem 1rem;
    }
}

/* MAIN CONTAINER */

#main-doc {
    padding: 2rem;
    color: var(--color-grey);
}

section header {
    color: var(--color-black);
    font-size: 1.4rem;
    font-weight: bold;
}

section article {
    margin: 1rem;
}

section p {
    margin-top: 1rem;
    margin-bottom: 1rem;
}

section li {
    margin: 1rem 0 0 3rem;
}

code {
	display: block;
	text-align: left;
	white-space: pre-line;
	word-break: normal;
	word-wrap: normal;
	line-height: 2;
	background-color: #f7f7f7;
	padding: 0.9375rem;
	margin: 0.625rem;
	border-radius: 5px;
}

@media screen and (min-width: 672px){
    /*add overflow so that the nav stays fixed on the left on bigger screens */
    #main-doc {
        overflow-y: auto;
    }
}

